--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "highlightjs": "^9.10.0"
   },
   "devDependencies": {
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^1.0.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
