--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "angular-aria": "^1.7.3",
     "angular-cookies": "^1.7.3",
     "angular-highlightjs": "^0.7.1",
+    "angular-hotkeys": "^1.7.0",
     "angular-intro.js": "^3.4.0",
     "angular-local-storage": "^0.7.1",
     "angular-material": "^1.1.10",
