--- a/package.json
+++ b/package.json
@@ -1,43 +1,46 @@
 {
   "name": "quiz-client",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "",
   "main": "app.js",
   "dependencies": {
-    "angular": "^1.7.7",
-    "angular-animate": "^1.7.7",
-    "angular-aria": "^1.7.7",
-    "angular-cookies": "^1.7.7",
+    "angular": "^1.7.8",
+    "angular-animate": "^1.7.8",
+    "angular-aria": "^1.7.8",
+    "angular-cookies": "^1.7.8",
     "angular-highlightjs": "^0.7.1",
     "angular-hotkeys": "^1.7.0",
     "angular-intro.js": "^3.4.0",
     "angular-local-storage": "^0.7.1",
-    "angular-material": "^1.1.13",
-    "angular-messages": "^1.7.7",
-    "angular-sanitize": "^1.7.7",
+    "angular-material": "^1.1.18",
+    "angular-messages": "^1.7.8",
+    "angular-sanitize": "^1.7.8",
     "highlightjs": "^9.12.0"
   },
   "devDependencies": {
     "copy-webpack-plugin": "^4.6.0",
     "css-loader": "^1.0.1",
+    "eslint": "^5.16.0",
+    "eslint-config-google": "^0.12.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "ng-annotate-loader": "^0.6.1",
     "ng-annotate-patched": "^1.9.0",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
-    "webpack": "^4.29.5",
-    "webpack-cli": "^3.2.3",
-    "webpack-dev-server": "^3.2.1"
+    "tar": "^4.4.8",
+    "webpack": "^4.31.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-server": "^3.3.1"
   },
   "scripts": {
-    "dev": "npm install && webpack --watch --progress --mode development",
-    "prod": "npm install && webpack --mode production",
-    "start": "webpack-dev-server"
+    "dev": "webpack --watch --progress --mode development",
+    "prod": "webpack --mode production",
+    "start": "npm install && webpack-dev-server"
   },
   "repository": {
     "type": "git",
