--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "quiz-client",
-  "version": "1.0.8",
+  "version": "1.1.0",
   "description": "",
   "main": "app.js",
   "dependencies": {
@@ -12,7 +12,7 @@
     "angular-hotkeys": "^1.7.0",
     "angular-intro.js": "^3.4.0",
     "angular-local-storage": "^0.7.1",
-    "angular-material": "^1.1.18",
+    "angular-material": "^1.1.20",
     "angular-messages": "^1.7.8",
     "angular-sanitize": "^1.7.8",
     "highlightjs": "^9.12.0"
@@ -25,22 +25,22 @@
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^4.0.0-beta.8",
     "ng-annotate-loader": "^0.6.1",
-    "ng-annotate-patched": "^1.9.0",
+    "ng-annotate-patched": "^1.11.1",
     "node-sass": "^4.12.0",
     "raw-loader": "^0.5.1",
-    "sass-loader": "^7.1.0",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
-    "tar": "^4.4.8",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.2",
-    "webpack-dev-server": "^3.3.1"
+    "tar": "^4.4.13",
+    "webpack": "^4.41.0",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2"
   },
   "scripts": {
     "dev": "webpack --watch --progress --mode development",
     "prod": "webpack --mode production",
-    "start": "npm install && webpack-dev-server"
+    "server": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
