--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
     "css-loader": "^1.0.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.12.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^4.0.0-beta.8",
+    "mini-css-extract-plugin": "^0.8.0",
     "ng-annotate-loader": "^0.6.1",
     "ng-annotate-patched": "^1.11.1",
     "node-sass": "^4.12.0",
