--- a/package.json
+++ b/package.json
@@ -1,41 +1,41 @@
 {
   "name": "quiz-client",
-  "version": "1.2.0",
+  "version": "1.2.1",
   "description": "",
   "main": "app.js",
   "dependencies": {
     "angular": "^1.8.0",
-    "angular-animate": "^1.7.8",
-    "angular-aria": "^1.7.8",
-    "angular-cookies": "^1.7.8",
+    "angular-animate": "^1.8.0",
+    "angular-aria": "^1.8.0",
+    "angular-cookies": "^1.8.0",
     "angular-highlightjs": "^0.7.1",
     "angular-hotkeys": "^1.7.0",
     "angular-intro.js": "^3.4.0",
     "angular-local-storage": "^0.7.1",
-    "angular-material": "^1.1.20",
-    "angular-messages": "^1.7.8",
-    "angular-sanitize": "^1.7.8",
-    "highlightjs": "^9.12.0"
+    "angular-material": "^1.1.24",
+    "angular-messages": "^1.8.0",
+    "angular-sanitize": "^1.8.0",
+    "highlightjs": "^9.16.2"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^4.6.0",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^1.0.1",
     "eslint": "^5.16.0",
     "eslint-config-google": "^0.12.0",
     "file-loader": "^2.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^4.0.0-beta.8",
-    "mini-css-extract-plugin": "^0.8.0",
-    "ng-annotate-loader": "^0.6.1",
-    "ng-annotate-patched": "^1.11.1",
-    "node-sass": "^4.12.0",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.8.2",
+    "ng-annotate-loader": "^0.7.0",
+    "ng-annotate-patched": "^1.12.0",
+    "node-sass": "^4.14.1",
     "raw-loader": "^0.5.1",
     "sass-loader": "^7.3.1",
     "style-loader": "^0.23.1",
     "tar": "^4.4.13",
-    "webpack": "^4.41.1",
-    "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.2"
+    "webpack": "^4.44.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   },
   "scripts": {
     "dev": "webpack --watch --progress --mode development",
